tests/golden/errors/chr-invalid.rk
fn main() {
    print(chr(-1))
}
